fixed right side of main content width fixed hity wykopu container width fixed hity wykopu spacing modified 'on fire' orange color

--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -4,6 +4,7 @@
   --whitish: #222225;
   --blackish: #f8fafc;  
   --porcelain: #121214;
+  --orange: #ef703f;
 }
 
 
